--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,10 @@ click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
 colorama==0.4.6
+cron-descriptor==1.4.3
 Django==5.0.4
 django-browser-reload==1.12.1
+django-celery-beat==2.6.0
 django-celery-results==2.5.1
 django-colorfield==0.11.0
 django-filter==24.2
@@ -18,12 +20,14 @@ django-js-asset==2.2.0
 django-mptt==0.16.0
 django-semantic-admin==0.5.0
 django-semantic-forms==0.1.5
+django-timezone-field==6.1.0
 django-treenode==0.22.0
 django-unfold==0.22.0
 fakeredis==2.22.0
 kombu==5.3.7
 pillow==10.3.0
 prompt-toolkit==3.0.43
+python-crontab==3.0.0
 python-dateutil==2.9.0.post0
 pytz==2024.1
 redis==5.0.4
